gap fix

--- a/css/main.css
+++ b/css/main.css
@@ -1053,7 +1053,7 @@ article{
           justify-content: flex-start;
           align-items: flex-start;
           flex-direction: column;
-          gap: 20px;
+          gap: 5px;
           opacity: 0;
           transition: 1000ms;
           cursor: default;
